config/objects/ITS_Posting__c.object
<CustomObject>
    <fields>
        <fullName>Deleted_At__c</fullName>
        <label>Deleted At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ITS_ID__c</fullName>
        <externalId>true</externalId>
        <label>ITS ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Load__c</fullName>
        <label>Load</label>
        <referenceTo>Load__c</referenceTo>
        <relationshipLabel>ITS Postings</relationshipLabel>
        <relationshipName>ITS_Postings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Posted_At__c</fullName>
        <label>Posted At</label>
        <type>DateTime</type>
    </fields>
    <label>ITS Posting</label>
    <nameField>
        <displayFormat>ITS-{0}</displayFormat>
        <label>ITS Posting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ITS Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>